force-app/main/default/objects/Response_From_Suggested_Meeting_Speaker__c/Response_From_Suggested_Meeting_Speaker__c.object-meta.xml
<CustomObject>
    <label>Response From Suggested Meeting Speaker</label>
    <nameField>
        <displayFormat>RFSMS-{0000}</displayFormat>
        <label>Response From Suggested Meeting Speaker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses From Suggested Meeting Speaker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>