force-app/main/default/objects/Response_From_Suggested_Meeting_Speaker__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Responses From Suggested Meeting Speaker</relationshipLabel>
    <relationshipName>Responses_From_Suggested_Meeting_Speaker</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>