force-app/main/default/objects/Response_From_Suggested_Meeting_Speaker__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I&apos;m interested</fullName>
            </value>
            <value>
                <fullName>Please, send me additional info</fullName>
            </value>
            <value>
                <fullName>I don&apos;t want to visit this meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>