force-app/main/default/objects/Response_From_Suggested_Meeting_Speaker__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Responses From Suggested Meeting Speaker</relationshipLabel>
    <relationshipName>Responses_From_Suggested_Meeting_Speaker</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>